Done upto Divider4.html

--- a/divider1.html
+++ b/divider1.html
@@ -27,7 +27,7 @@
     
     <div id="page" class="page main-container">
         <div data-attr-rnd="customsection">
-            <div class="wrapper bg white divider-1" align="center">
+            <div class="wrapper bg white divider-1" align="center"  style="background:transparent;">
                 <div class="container" align="center">
                     <span class="bg">Lorem ipsum dolor</span>
                     <hr style="background:#f00;">
