--- a/divider2.html
+++ b/divider2.html
@@ -26,10 +26,10 @@
 <body>
     
     <div class="page main-container" id="page">
-        <div id="clients" class="item contact padding-top-0 padding-bottom-0" data-attr-rnd="customsection">
-            <div class="wrapper bg white divider-2" style="height: 65px; margin-top: 15px;">
-                <div align="center" class="container" style="margin-top: 0px; margin-bottom: 0px;">
-                    <span class="divider-content bg">
+        <div data-attr-rnd="customsection">
+            <div class="wrapper bg white divider-2">
+                <div align="center" class="container">
+                    <span class="divider-content bg editContent">
                         Lorem ipsum dolor
                         <span class="divider-border bg"></span>
                     </span>
