--- a/divider3.html
+++ b/divider3.html
@@ -26,9 +26,9 @@
 <body>
     
     <div id="page" class="page main-container">
-        <div data-attr-rnd="customsection" class="item contact padding-top-0 padding-bottom-0" id="clients">
-            <div class="wrapper bg white divider-3" style="height: 65px; margin-top: 15px;">
-                <div class="container" align="center"  style="margin-top: 0px; margin-bottom: 0px;">
+        <div data-attr-rnd="customsection">
+            <div class="wrapper bg white divider-3">
+                <div class="container" align="center">
                     <span class="divider-content bg">
                         Lorem ipsum dolor
                         <span class="divider-border bg"></span>
