Done till pricing

--- a/icon-1-1_column.html
+++ b/icon-1-1_column.html
@@ -32,13 +32,13 @@
                     <div class="row">
                         <div class="drag-column col-sm-12 animate-this">
                             <div class="drag-column col-sm-1">
-                                <h1>
+                                <span class="h1 clearfix" style="text-align:left">
                                     <i class="fa fa-rocket"></i>
-                                </h1>
+                                </span>
                             </div>
                             <div class="drag-column col-sm-11">
-                                <span class="editContent">
-                                    <h1>Lorem ipsum</h1>
+                                <span>
+                                    <span class="h1 clearfix editContent" style="text-align:left">Lorem ipsum</span>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere. Fusce rhoncus, ligula a eleifend pellentesque, nisi metus ullamcorper lacus, sed bibendum ante est vitae neque. In tempor ligula metus, vitae efficitur sem molestie quis. Maecenas dui arcu, lacinia eu neque bibendum, tempus iaculis ex.</p>
                                 </span>
                             </div>
