--- a/icon-1-4_column.html
+++ b/icon-1-4_column.html
@@ -26,20 +26,20 @@
 <body>
     
     <div id="page" class="page main-container">
-        <div data-attr-rnd="customsection" class="item contact padding-top-0 padding-bottom-0" id="clients">
+        <div data-attr-rnd="customsection">
             <div class="wrapper bg">
                 <div class="container column-5 padding-20">
                     <div class="row">
                         <div class="drag-column col-sm-3 animate-this">
                             <div class="drag-column col-sm-2">
-                                <h1>
+                                <span class="h1 clearfix" style="text-align:left">
                                     <i class="fa fa-building"></i>
-                                </h1>
+                                </span>
                             </div>
                             <div class="drag-column col-sm-10">
-                                <span class="editContent">
-                                    <h1>Lorem</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere. Fusce rhoncus, ligula a eleifend pellentesque, nisi metus ullamcorper lacus, sed bibendum ante est vitae neque.</p>
+                                <span class="">
+                                    <span class="h1 clearfix editContent" style="text-align:left">Lorem ipsum</span>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere.</p>
                                 </span>
                             </div>
 
@@ -47,14 +47,14 @@
 
                         <div class="drag-column col-sm-3 animate-this">
                             <div class="drag-column col-sm-2">
-                                <h1>
-                                    <i class="fa fa-rocket"></i>
-                                </h1>
+                                <span class="h1 clearfix" style="text-align:left">
+                                    <i class="fa fa-building"></i>
+                                </span>
                             </div>
                             <div class="drag-column col-sm-10">
-                                <span class="editContent">
-                                    <h1>Lorem</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere. Fusce rhoncus, ligula a eleifend pellentesque, nisi metus ullamcorper lacus, sed bibendum ante est vitae neque.</p>
+                                <span class="">
+                                    <span class="h1 clearfix editContent" style="text-align:left">Lorem ipsum</span>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere.</p>
                                 </span>
                             </div>
 
@@ -62,14 +62,14 @@
 
                         <div class="drag-column col-sm-3 animate-this">
                             <div class="drag-column col-sm-2">
-                                <h1>
-                                    <i class="fa fa-search"></i>
-                                </h1>
+                                <span class="h1 clearfix" style="text-align:left">
+                                    <i class="fa fa-building"></i>
+                                </span>
                             </div>
                             <div class="drag-column col-sm-10">
-                                <span class="editContent">
-                                    <h1>Lorem</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere. Fusce rhoncus, ligula a eleifend pellentesque, nisi metus ullamcorper lacus, sed bibendum ante est vitae neque.</p>
+                                <span class="">
+                                    <span class="h1 clearfix editContent" style="text-align:left">Lorem ipsum</span>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere.</p>
                                 </span>
                             </div>
 
@@ -77,14 +77,14 @@
 
                         <div class="drag-column col-sm-3 animate-this">
                             <div class="drag-column col-sm-2">
-                                <h1>
-                                    <i class="fa fa-reorder"></i>
-                                </h1>
+                                <span class="h1 clearfix" style="text-align:left">
+                                    <i class="fa fa-building"></i>
+                                </span>
                             </div>
                             <div class="drag-column col-sm-10">
                                 <span class="editContent">
-                                    <h1>Lorem</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere. Fusce rhoncus, ligula a eleifend pellentesque, nisi metus ullamcorper lacus, sed bibendum ante est vitae neque.</p>
+                                    <span class="h1 clearfix" style="text-align:left">Lorem ipsum</span>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla egestas tellus sit amet libero lacinia posuere.</p>
                                 </span>
                             </div>
 
