--- a/image-2.html
+++ b/image-2.html
@@ -26,24 +26,24 @@
 <body>
     
     <div id="page" class="page main-container">
-        <div data-attr-rnd="customsection" class="item contact padding-top-0 padding-bottom-0" id="clients">
+        <div data-attr-rnd="customsection">
             <div class="wrapper bg white">
 
                 <div class="container images-2">
                     <div class="row">
                         <div class="drag-column col-sm-4">
                             <a href="#">
-                                <img src="images/390X390.png">
+                                <img src="images/Movie_Brainy.png">
                             </a>
                         </div>    
                         <div class="drag-column col-sm-4">
                             <a href="#">
-                                <img src="images/390X390.png">
+                                <img src="images/Hefty-original.png">
                             </a>
                         </div>
                         <div class="drag-column col-sm-4">
                             <a href="#">
-                                <img src="images/390X390.png">
+                                <img src="images/Movie_Brainy.png">
                             </a>
                         </div>
 
