--- a/img-left-form-right_column.html
+++ b/img-left-form-right_column.html
@@ -26,13 +26,13 @@
 <body>
     
     <div id="page" class="page main-container">
-        <div data-attr-rnd="customsection" class="item contact padding-top-0 padding-bottom-0" id="clients">
+        <div data-attr-rnd="customsection">
             <div class="wrapper bg">
                 <div class="container column-1">
                     <div class="row">
                         <div class="drag-column col-sm-6 animate-this">
                             
-                            <img src="http://finda.photo/image/4749/thumbnail/original" class="width-100-p" data-selector="img" style="border-radius: 0px !important; border: 1px none rgb(51, 51, 51) !important;">
+                            <img src="images/Movie_Brainy.png" class="width-100-p" data-selector="img" style="border-radius: 0px !important; border: 1px none rgb(51, 51, 51) !important;">
 
                         </div>
 
